--- a/tp2.html
+++ b/tp2.html
@@ -6,11 +6,13 @@
 </head>
 <body>
     <form action="toServer" onsubmit="return validateForm() " method="post">
-        <label for="name">Nombre: <br> </label>
+        <label for="name">Nombre:</label>
         <input type="text" id="name">
 
-        <label for="lastName"><br>Apellido: <br> </label>
+        <label for="lastName">Apellido: </label>
         <input type="text" id="lastName">
+
+        <label for="age">Edad: </label>
         
     
     </form>
